support restoring from html backup and uri lists directly

--- a/Stratum.Droid/Assets/about.html
+++ b/Stratum.Droid/Assets/about.html
@@ -97,6 +97,11 @@
     <p>Apache-2.0 License</p>
     <a href="https://github.com/zxing-cpp/zxing-cpp">https://github.com/zxing-cpp/zxing-cpp</a>
 
+    <h3>HtmlAgilityPack</h3>
+    <p>Copyright &copy; ZZZ Projects</p>
+    <p>MIT License</p>
+    <a href="https://github.com/zzzprojects/html-agility-pack">https://github.com/zzzprojects/html-agility-pack</a>
+
     %LICENSE
 </body>
 </html>
